[tool.poetry]
name = "hello-world_DONE"
version = "0.1.0"
description = ""
authors = ["Saikat K <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
eth-ape = "^0.6.22"
pwntools = "^4.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
